manifests/test/manifests.yaml
---
# Source: generic-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helsesjekk-bot
spec:
  selector:
    app: helsesjekk-bot
  ports:
  - name: helsesjekk-bot
    port: 80
    targetPort: 3000
---
# Source: generic-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helsesjekk-bot
    my-label: example
  name: helsesjekk-bot
  annotations:
    nrk/criticality: "4"
    nrk/documentation: "https://github.com/nrkno/helsesjekk-bot"
    nrk/alert-treshold-max-unavailable-replicas: "50%"
    nrk/ignore-monitoring: "false"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: helsesjekk-bot
  template:
    metadata:
      labels:
        app: helsesjekk-bot
    spec:
      restartPolicy: Always
      priorityClassName: non-critical
      containers:
        - image: plattform.azurecr.io/helsesjekk-bot/test
          name: helsesjekk-bot
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
---
# Source: generic-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helsesjekk-bot
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    nrk/ignore-monitoring: "false"
    nrk/ignore-monitoring-hosts: "false"
    nrk/ignore-monitoring-paths: "false"
    another/annotation: something
spec:
  tls:
  - hosts:
    - helsesjekk-bot.eno-nonprod.inn.azure.nrk.cloud
  rules:
  - host: helsesjekk-bot.eno-nonprod.inn.azure.nrk.cloud
    http:
      paths:
      - backend:
          service:
            name: helsesjekk-bot
            port:
              number: 80
        path: /
        pathType: Prefix
